# GFX_renderer

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  Dependencies.cmake  Dependencies.lua  premake5.lua  readme.md
GFX/: CMakeLists.txt
GFX/include/GFX/: Config.h  Debug.h  GFX.h
GFX/include/GFX/Core/: Backend.h  Base.h  GFXCore.h  SwapChain.h  Window.h
GFX/include/GFX/Renderers/: Renderer2D.h  RendererForward.h  RendererStructures.h
GFX/include/GFX/Rendering/: Renderer.h
GFX/include/GFX/Resources/: Buffer.h  CommandBuffer.h  Font.h  Framebuffer.h  Mesh.h  MeshBuilder.h  MeshImporter.h  Pipeline.h  Primitives.h  RawBuffer.h  ResourceDescriptions.h  ResourceSet.h  ResourceSetLayout.h  Scissor.h  Shader.h  ShaderUniform.h  Texture.h  TextureBuilder.h  TextureImporter.h  UniformBuffer.h  Vertex.h  VertexLayout.h  Viewport.h
GFX/include/GFX/Utility/: Color.h  IO.h  RectPacker.h  TexturePacker.h
GFX/include/GFX_old/: Config.h  Debug.h  GFX.h  IWindowSurface.h  RenderContext.h
GFX/include/GFX_old/Core/: RenderSurface.h
GFX/include/GFX_old/Renderers/: Renderer2D.h  RendererDeferred.h  RendererForward.h  RendererStructures.h
GFX/include/GFX_old/Resources/: Image.h  Material.h  Mesh.h  Primitives.h  RawBuffer.h  ResourceDescriptions.h  Shader.h  ShaderUniform.h  UniformBufferSet.h  Vertex.h  VertexLayout.h
GFX/include/GFX_old/Utility/: Color.h
GFX/src/: CMakeLists.txt  Debug.cpp
GFX/src/Core/: Backend.cpp  GFXCore.cpp  SwapChain.cpp  Window.cpp
GFX/src/GFX/: Debug.cpp
GFX/src/GFX/Renderers/: RendererForward.cpp
GFX/src/GFX/Resources/: Mesh.cpp  Primitives.cpp  Shader.cpp
GFX/src/GFX/Utility/: Color.cpp
GFX/src/GFX_old/: CommandBuffer.h  Debug.cpp  GFXAPI.h
GFX/src/GFX_old/Platform/Vulkan/: VulkanAllocator.cpp  VulkanAllocator.h  VulkanBuffer.cpp  VulkanBuffer.h  VulkanCommandBuffer.cpp  VulkanCommandBuffer.h  VulkanCore.cpp  VulkanCore.h  VulkanDeviceContext.cpp  VulkanDeviceContext.h  VulkanFramebuffer.cpp  VulkanFramebuffer.h  VulkanGFX.cpp  VulkanImage.cpp  VulkanImage.h  VulkanMaterial.cpp  VulkanMaterial.h  VulkanPipeline.cpp  VulkanPipeline.h  VulkanRenderContext.cpp  VulkanRenderContext.h  VulkanRenderSurface.cpp  VulkanRenderSurface.h  VulkanShader.cpp  VulkanShader.h  VulkanSurface.h  VulkanTexture.cpp  VulkanTexture.h  VulkanUniformBuffer.cpp  VulkanUniformBuffer.h  VulkanUtils.cpp  VulkanUtils.h  vk_mem_alloc.h
GFX/src/GFX_old/Renderers/: RendererForward.cpp
GFX/src/GFX_old/Resources/: Mesh.cpp  Primitives.cpp  Shader.cpp  ShaderUniform.cpp  UniformBufferSet.cpp
GFX/src/GFX_old/Utility/: Color.cpp
GFX/src/Platform/Vulkan/: VulkanAllocator.cpp  VulkanAllocator.h  VulkanBackend.cpp  VulkanBackend.h  VulkanBuffer.cpp  VulkanBuffer.h  VulkanCommandBuffer.cpp  VulkanCommandBuffer.h  VulkanCore.cpp  VulkanCore.h  VulkanDevice.cpp  VulkanDevice.h  VulkanDeviceContext.cpp  VulkanDeviceContext.h  VulkanFramebuffer.cpp  VulkanFramebuffer.h  VulkanGFX.cpp  VulkanImage.cpp  VulkanImage.h  VulkanMaterial.cpp  VulkanMaterial.h  VulkanPhysicalDevice.cpp  VulkanPhysicalDevice.h  VulkanPipeline.cpp  VulkanPipeline.h  VulkanRenderContext.cpp  VulkanRenderSurface.cpp  VulkanRenderSurface.h  VulkanResourceSet.cpp  VulkanResourceSet.h  VulkanResourceSetLayout.cpp  VulkanResourceSetLayout.h  VulkanShader.cpp  VulkanShader.h  VulkanSurface.h  VulkanSwapChain.cpp  VulkanSwapChain.h  VulkanTexture.cpp  VulkanTexture.h  VulkanUtils.cpp  (+1 more)
GFX/src/Resources/: Buffer.cpp  CommandBuffer.cpp  Font.cpp  Framebuffer.cpp  MeshBuilder.cpp  MeshImporter.cpp  Pipeline.cpp  ResourceSet.cpp  ResourceSetLayout.cpp  Shader.cpp  Texture.cpp  TextureBuilder.cpp  TextureImporter.cpp  UniformBuffer.cpp
GFX/src/Utility/: IO.cpp  RectPacker.cpp  TexturePacker.cpp  Timer.cpp  Timer.h
Renderer/: CMakeLists.txt
Renderer/include/GFX/: Config.h  Debug.h  DeviceContext.h  GFX.h
Renderer/include/GFX/Renderers/: DrawCall.h  ForwardRenderer.h  RendererDeferred.h  RendererForward.h  RendererStructures.h
Renderer/include/GFX/Resources/: Buffer.h  Mesh.h  RawBuffer.h  ResourceDescriptions.h  ShaderUniform.h  UniformBuffer.h  UniformBufferSet.h  Vertex.h
Renderer/src/GFX/: GFXAPI.h
Renderer/src/GFX/Renderers/: ForwardRenderer.cpp  RendererForward.cpp
Renderer/src/GFX/Resources/: Mesh.cpp  ShaderUniform.cpp  UniformBufferSet.cpp
Renderer/src/Platform/Vulkan/: VulkanAllocator.cpp  VulkanAllocator.h  VulkanBuffer.cpp  VulkanBuffer.h  VulkanCommandBuffer.cpp  VulkanCommandBuffer.h  VulkanCore.cpp  VulkanCore.h  VulkanDeviceContext.cpp  VulkanDeviceContext.h  VulkanFramebuffer.cpp  VulkanFramebuffer.h  VulkanGFX.cpp  VulkanMaterial.cpp  VulkanMaterial.h  VulkanPipeline.cpp  VulkanPipeline.h  VulkanRenderContext.cpp  VulkanRenderContext.h  VulkanShader.cpp  VulkanShader.h  VulkanSurface.h  VulkanUniformBuffer.cpp  VulkanUniformBuffer.h  VulkanUtils.cpp  VulkanUtils.h  gfx_vulkan.cpp
dependencies/: CMakeLists.txt
dependencies/stb/: CMakeLists.txt
examples/: CMakeLists.txt
examples/HelloForwardRenderer/: HelloForwardRenderer.cpp
examples/HelloForwardRenderer/resources/: PBR_Static.glsl
examples/HelloForwardRenderer/resources/forwardrenderer/: scene_shader.glsl
examples/HelloOffscreen/: HelloOffscreen.cpp
examples/HelloTriangle/: HelloTriangle.cpp
examples/HelloTriangle_raw/: HelloTriangle_raw.cpp  HelloTriangle_raw.h
examples/HelloUniforms/: HelloUniforms.cpp
examples/HelloWindow/: HelloWindow.cpp
examples/base/: CMakeLists.txt
examples/base/src/ExampleBase/: ExampleBase.cpp  ExampleBase.h  Input.cpp  Input.h  Window.cpp  Window.h
resources/models/backpack/: scene.gltf
resources/models/crysis_nano_suit/: scene.gltf
resources/models/dungeon/: scene.gltf
resources/models/gun/: scene.gltf
resources/models/labratory/: scene.gltf
resources/shaders/: PBR_Static.glsl  ShadowMap.glsl  hello_uniform.glsl  shader.glsl  shader.vert  triangle_shader.glsl  uniform_shader.glsl
scripts/: Clean.bat  DownloadVulkanSDK.bat  DownloadVulkanSDK.py  GenProjects-Win.bat  Setup.py  Utils.py  Vulkan.py
(+1 files in other folders)
